--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.66.1",
+    "swiper": "^10.2.0",
     "typescript": "5.2.2"
   }
 }
